app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: var(--font-raleway), Arial, Helvetica, sans-serif;
}

html {
  scroll-behavior: smooth;
  scroll-snap-type: y proximity;
  font-smooth: antialiased;
}

h2,
h3,
h4 {
  @apply scroll-mt-24 md:scroll-mt-28;
}

.content {
  @apply text-black;
  p {
    @apply text-lg font-semibold leading-[1.4];
  }

  strong {
    @apply font-black;
  }
  p + p,
  ul + p,
  p + ul,
  ul + ul,
  ol + ul,
  ul + ol,
  ol + ol,
  ol + p,
  p + ol,
  p + h3 {
    margin-top: 1.5rem;
  }

  h3 + p {
    margin-top: 0.5rem;
  }

  h2 {
    @apply text-[32px] text-green-800 font-neutraface mt-10  leading-tight mb-4;
  }

  a {
    @apply text-green-800 underline;
  }

  ul {
    @apply list-disc pl-5;
  }

  table {
    @apply font-semibold w-full;
  }

  * + table {
    margin-top: 1.5rem;
  }
  td {
    @apply px-5 py-3;
  }

  th {
    @apply border-b border-black text-left px-5;
  }
}

/* Hide scrollbar for Chrome, Safari and Opera */
.no-scrollbar::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.no-scrollbar {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

